// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`IPC message snapshots ClientMessage types auth serializes to expected JSON 1`] = `
{
  "token": "abc123def456",
  "type": "auth",
}
`;

exports[`IPC message snapshots ClientMessage types user_message serializes to expected JSON 1`] = `
{
  "commandIntent": {
    "action": "start",
    "domain": "screen_recording",
  },
  "content": "Hello, assistant!",
  "interface": "cli",
  "sessionId": "sess-001",
  "type": "user_message",
}
`;

exports[`IPC message snapshots ClientMessage types confirmation_response serializes to expected JSON 1`] = `
{
  "decision": "allow",
  "requestId": "req-001",
  "selectedPattern": "bash:npm *",
  "selectedScope": "/projects/my-app",
  "type": "confirmation_response",
}
`;

exports[`IPC message snapshots ClientMessage types contacts serializes to expected JSON 1`] = `
{
  "action": "list",
  "limit": 50,
  "role": "guardian",
  "type": "contacts",
}
`;

exports[`IPC message snapshots ClientMessage types session_list serializes to expected JSON 1`] = `
{
  "type": "session_list",
}
`;

exports[`IPC message snapshots ClientMessage types session_create serializes to expected JSON 1`] = `
{
  "correlationId": "corr-001",
  "threadType": "standard",
  "title": "New session",
  "transport": {
    "channelId": "vellum",
    "hints": [
      "dashboard-capable",
    ],
    "interfaceId": "macos",
    "uxBrief": "Prefer dashboard-first onboarding.",
  },
  "type": "session_create",
}
`;

exports[`IPC message snapshots ClientMessage types session_switch serializes to expected JSON 1`] = `
{
  "sessionId": "sess-002",
  "type": "session_switch",
}
`;

exports[`IPC message snapshots ClientMessage types session_rename serializes to expected JSON 1`] = `
{
  "sessionId": "sess-002",
  "title": "Renamed session",
  "type": "session_rename",
}
`;

exports[`IPC message snapshots ClientMessage types ping serializes to expected JSON 1`] = `
{
  "type": "ping",
}
`;

exports[`IPC message snapshots ClientMessage types cancel serializes to expected JSON 1`] = `
{
  "type": "cancel",
}
`;

exports[`IPC message snapshots ClientMessage types delete_queued_message serializes to expected JSON 1`] = `
{
  "requestId": "req-001",
  "sessionId": "sess-001",
  "type": "delete_queued_message",
}
`;

exports[`IPC message snapshots ClientMessage types model_get serializes to expected JSON 1`] = `
{
  "type": "model_get",
}
`;

exports[`IPC message snapshots ClientMessage types model_set serializes to expected JSON 1`] = `
{
  "model": "claude-opus-4-6",
  "type": "model_set",
}
`;

exports[`IPC message snapshots ClientMessage types image_gen_model_set serializes to expected JSON 1`] = `
{
  "model": "gemini-2.5-flash-image",
  "type": "image_gen_model_set",
}
`;

exports[`IPC message snapshots ClientMessage types history_request serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "type": "history_request",
}
`;

exports[`IPC message snapshots ClientMessage types undo serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "type": "undo",
}
`;

exports[`IPC message snapshots ClientMessage types regenerate serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "type": "regenerate",
}
`;

exports[`IPC message snapshots ClientMessage types usage_request serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "type": "usage_request",
}
`;

exports[`IPC message snapshots ClientMessage types cu_session_create serializes to expected JSON 1`] = `
{
  "screenHeight": 1080,
  "screenWidth": 1920,
  "sessionId": "cu-sess-001",
  "task": "Open Safari and search for weather",
  "type": "cu_session_create",
}
`;

exports[`IPC message snapshots ClientMessage types cu_session_abort serializes to expected JSON 1`] = `
{
  "sessionId": "cu-sess-001",
  "type": "cu_session_abort",
}
`;

exports[`IPC message snapshots ClientMessage types cu_observation serializes to expected JSON 1`] = `
{
  "axDiff": "+ new element",
  "axTree": "<ax-tree>...</ax-tree>",
  "captureDisplayId": 69734112,
  "coordinateOrigin": "top_left",
  "executionResult": "click completed",
  "screenHeightPt": 1080,
  "screenWidthPt": 1920,
  "screenshot": "base64-screenshot-data",
  "screenshotHeightPx": 720,
  "screenshotWidthPx": 1280,
  "secondaryWindows": "Finder, Terminal",
  "sessionId": "cu-sess-001",
  "type": "cu_observation",
}
`;

exports[`IPC message snapshots ClientMessage types ride_shotgun_start serializes to expected JSON 1`] = `
{
  "durationSeconds": 300,
  "intervalSeconds": 10,
  "type": "ride_shotgun_start",
}
`;

exports[`IPC message snapshots ClientMessage types ride_shotgun_stop serializes to expected JSON 1`] = `
{
  "type": "ride_shotgun_stop",
  "watchId": "watch-001",
}
`;

exports[`IPC message snapshots ClientMessage types watch_observation serializes to expected JSON 1`] = `
{
  "appName": "Xcode",
  "bundleIdentifier": "com.apple.dt.Xcode",
  "captureIndex": 0,
  "ocrText": "Screen text captured during watch",
  "sessionId": "sess-001",
  "timestamp": 1700000000,
  "totalExpected": 10,
  "type": "watch_observation",
  "watchId": "watch-001",
  "windowTitle": "Project.swift",
}
`;

exports[`IPC message snapshots ClientMessage types task_submit serializes to expected JSON 1`] = `
{
  "commandIntent": {
    "action": "start",
    "domain": "screen_recording",
  },
  "screenHeight": 1080,
  "screenWidth": 1920,
  "task": "Open Safari and search for weather",
  "type": "task_submit",
}
`;

exports[`IPC message snapshots ClientMessage types ui_surface_action serializes to expected JSON 1`] = `
{
  "actionId": "btn-ok",
  "data": {
    "selectedItem": "item-1",
  },
  "sessionId": "sess-001",
  "surfaceId": "surface-001",
  "type": "ui_surface_action",
}
`;

exports[`IPC message snapshots ClientMessage types app_data_request serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "callId": "call-001",
  "method": "query",
  "surfaceId": "surface-001",
  "type": "app_data_request",
}
`;

exports[`IPC message snapshots ClientMessage types skills_list serializes to expected JSON 1`] = `
{
  "type": "skills_list",
}
`;

exports[`IPC message snapshots ClientMessage types skill_detail serializes to expected JSON 1`] = `
{
  "skillId": "my-skill",
  "type": "skill_detail",
}
`;

exports[`IPC message snapshots ClientMessage types skills_enable serializes to expected JSON 1`] = `
{
  "name": "my-skill",
  "type": "skills_enable",
}
`;

exports[`IPC message snapshots ClientMessage types skills_disable serializes to expected JSON 1`] = `
{
  "name": "my-skill",
  "type": "skills_disable",
}
`;

exports[`IPC message snapshots ClientMessage types skills_configure serializes to expected JSON 1`] = `
{
  "apiKey": "sk-test",
  "config": {
    "verbose": true,
  },
  "env": {
    "API_KEY": "test-key",
  },
  "name": "my-skill",
  "type": "skills_configure",
}
`;

exports[`IPC message snapshots ClientMessage types skills_install serializes to expected JSON 1`] = `
{
  "slug": "clawhub/my-skill",
  "type": "skills_install",
  "version": "1.0.0",
}
`;

exports[`IPC message snapshots ClientMessage types skills_uninstall serializes to expected JSON 1`] = `
{
  "name": "my-skill",
  "type": "skills_uninstall",
}
`;

exports[`IPC message snapshots ClientMessage types skills_update serializes to expected JSON 1`] = `
{
  "name": "my-skill",
  "type": "skills_update",
}
`;

exports[`IPC message snapshots ClientMessage types skills_check_updates serializes to expected JSON 1`] = `
{
  "type": "skills_check_updates",
}
`;

exports[`IPC message snapshots ClientMessage types skills_search serializes to expected JSON 1`] = `
{
  "query": "weather",
  "type": "skills_search",
}
`;

exports[`IPC message snapshots ClientMessage types skills_inspect serializes to expected JSON 1`] = `
{
  "slug": "clawhub/my-skill",
  "type": "skills_inspect",
}
`;

exports[`IPC message snapshots ClientMessage types skills_draft serializes to expected JSON 1`] = `
{
  "sourceText": "Create a weather skill",
  "type": "skills_draft",
}
`;

exports[`IPC message snapshots ClientMessage types skills_create serializes to expected JSON 1`] = `
{
  "bodyMarkdown": 
"# Weather

Fetches weather data."
,
  "description": "Fetches current weather",
  "disableModelInvocation": false,
  "emoji": "🌤️",
  "name": "Weather Skill",
  "overwrite": false,
  "skillId": "weather-skill",
  "type": "skills_create",
  "userInvocable": true,
}
`;

exports[`IPC message snapshots ClientMessage types suggestion_request serializes to expected JSON 1`] = `
{
  "requestId": "req-suggest-001",
  "sessionId": "sess-001",
  "type": "suggestion_request",
}
`;

exports[`IPC message snapshots ClientMessage types add_trust_rule serializes to expected JSON 1`] = `
{
  "allowHighRisk": true,
  "decision": "allow",
  "executionTarget": "host",
  "pattern": "git *",
  "scope": "/projects/my-app",
  "toolName": "bash",
  "type": "add_trust_rule",
}
`;

exports[`IPC message snapshots ClientMessage types trust_rules_list serializes to expected JSON 1`] = `
{
  "type": "trust_rules_list",
}
`;

exports[`IPC message snapshots ClientMessage types remove_trust_rule serializes to expected JSON 1`] = `
{
  "id": "rule-001",
  "type": "remove_trust_rule",
}
`;

exports[`IPC message snapshots ClientMessage types update_trust_rule serializes to expected JSON 1`] = `
{
  "decision": "allow",
  "id": "rule-001",
  "pattern": "git push *",
  "priority": 50,
  "scope": "/projects/my-app",
  "tool": "bash",
  "type": "update_trust_rule",
}
`;

exports[`IPC message snapshots ClientMessage types schedules_list serializes to expected JSON 1`] = `
{
  "type": "schedules_list",
}
`;

exports[`IPC message snapshots ClientMessage types schedule_toggle serializes to expected JSON 1`] = `
{
  "enabled": false,
  "id": "sched-001",
  "type": "schedule_toggle",
}
`;

exports[`IPC message snapshots ClientMessage types schedule_remove serializes to expected JSON 1`] = `
{
  "id": "sched-001",
  "type": "schedule_remove",
}
`;

exports[`IPC message snapshots ClientMessage types schedule_run_now serializes to expected JSON 1`] = `
{
  "id": "sched-001",
  "type": "schedule_run_now",
}
`;

exports[`IPC message snapshots ClientMessage types reminders_list serializes to expected JSON 1`] = `
{
  "type": "reminders_list",
}
`;

exports[`IPC message snapshots ClientMessage types reminder_cancel serializes to expected JSON 1`] = `
{
  "id": "rem-001",
  "type": "reminder_cancel",
}
`;

exports[`IPC message snapshots ClientMessage types bundle_app serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "type": "bundle_app",
}
`;

exports[`IPC message snapshots ClientMessage types app_open_request serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "type": "app_open_request",
}
`;

exports[`IPC message snapshots ClientMessage types app_delete serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "type": "app_delete",
}
`;

exports[`IPC message snapshots ClientMessage types apps_list serializes to expected JSON 1`] = `
{
  "type": "apps_list",
}
`;

exports[`IPC message snapshots ClientMessage types home_base_get serializes to expected JSON 1`] = `
{
  "ensureLinked": true,
  "type": "home_base_get",
}
`;

exports[`IPC message snapshots ClientMessage types shared_apps_list serializes to expected JSON 1`] = `
{
  "type": "shared_apps_list",
}
`;

exports[`IPC message snapshots ClientMessage types shared_app_delete serializes to expected JSON 1`] = `
{
  "type": "shared_app_delete",
  "uuid": "abc-123-def",
}
`;

exports[`IPC message snapshots ClientMessage types fork_shared_app serializes to expected JSON 1`] = `
{
  "type": "fork_shared_app",
  "uuid": "abc-123-def",
}
`;

exports[`IPC message snapshots ClientMessage types open_bundle serializes to expected JSON 1`] = `
{
  "filePath": "/tmp/My_App.vellum",
  "type": "open_bundle",
}
`;

exports[`IPC message snapshots ClientMessage types sign_bundle_payload_response serializes to expected JSON 1`] = `
{
  "keyId": "abc123",
  "publicKey": "dGVzdA==",
  "requestId": "req-sign-001",
  "signature": "dGVzdC1zaWduYXR1cmU=",
  "type": "sign_bundle_payload_response",
}
`;

exports[`IPC message snapshots ClientMessage types get_signing_identity_response serializes to expected JSON 1`] = `
{
  "keyId": "abc123",
  "publicKey": "dGVzdA==",
  "requestId": "req-identity-001",
  "type": "get_signing_identity_response",
}
`;

exports[`IPC message snapshots ClientMessage types secret_response serializes to expected JSON 1`] = `
{
  "delivery": "store",
  "requestId": "req-secret-001",
  "type": "secret_response",
  "value": "ghp_test_token_value",
}
`;

exports[`IPC message snapshots ClientMessage types sessions_clear serializes to expected JSON 1`] = `
{
  "type": "sessions_clear",
}
`;

exports[`IPC message snapshots ClientMessage types conversation_search serializes to expected JSON 1`] = `
{
  "limit": 20,
  "maxMessagesPerConversation": 3,
  "query": "hello world",
  "type": "conversation_search",
}
`;

exports[`IPC message snapshots ClientMessage types message_content_request serializes to expected JSON 1`] = `
{
  "messageId": "msg-001",
  "sessionId": "sess-001",
  "type": "message_content_request",
}
`;

exports[`IPC message snapshots ClientMessage types ipc_blob_probe serializes to expected JSON 1`] = `
{
  "nonceSha256": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  "probeId": "aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee",
  "type": "ipc_blob_probe",
}
`;

exports[`IPC message snapshots ClientMessage types gallery_list serializes to expected JSON 1`] = `
{
  "type": "gallery_list",
}
`;

exports[`IPC message snapshots ClientMessage types gallery_install serializes to expected JSON 1`] = `
{
  "galleryAppId": "gallery-focus-timer",
  "type": "gallery_install",
}
`;

exports[`IPC message snapshots ClientMessage types app_update_preview serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "preview": "base64-png-data",
  "type": "app_update_preview",
}
`;

exports[`IPC message snapshots ClientMessage types app_preview_request serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "type": "app_preview_request",
}
`;

exports[`IPC message snapshots ClientMessage types app_history_request serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "limit": 25,
  "type": "app_history_request",
}
`;

exports[`IPC message snapshots ClientMessage types app_diff_request serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "fromCommit": "abc123def456",
  "toCommit": "789abc123def",
  "type": "app_diff_request",
}
`;

exports[`IPC message snapshots ClientMessage types app_file_at_version_request serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "commitHash": "abc123def456",
  "path": "index.html",
  "type": "app_file_at_version_request",
}
`;

exports[`IPC message snapshots ClientMessage types app_restore_request serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "commitHash": "abc123def456",
  "type": "app_restore_request",
}
`;

exports[`IPC message snapshots ClientMessage types share_app_cloud serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "type": "share_app_cloud",
}
`;

exports[`IPC message snapshots ClientMessage types slack_webhook_config serializes to expected JSON 1`] = `
{
  "action": "get",
  "type": "slack_webhook_config",
}
`;

exports[`IPC message snapshots ClientMessage types ingress_config serializes to expected JSON 1`] = `
{
  "action": "get",
  "type": "ingress_config",
}
`;

exports[`IPC message snapshots ClientMessage types platform_config serializes to expected JSON 1`] = `
{
  "action": "get",
  "type": "platform_config",
}
`;

exports[`IPC message snapshots ClientMessage types vercel_api_config serializes to expected JSON 1`] = `
{
  "action": "get",
  "type": "vercel_api_config",
}
`;

exports[`IPC message snapshots ClientMessage types twitter_integration_config serializes to expected JSON 1`] = `
{
  "action": "get",
  "type": "twitter_integration_config",
}
`;

exports[`IPC message snapshots ClientMessage types telegram_config serializes to expected JSON 1`] = `
{
  "action": "get",
  "type": "telegram_config",
}
`;

exports[`IPC message snapshots ClientMessage types guardian_verification serializes to expected JSON 1`] = `
{
  "action": "create_session",
  "channel": "telegram",
  "sessionId": "sess-001",
  "type": "guardian_verification",
}
`;

exports[`IPC message snapshots ClientMessage types twitter_auth_start serializes to expected JSON 1`] = `
{
  "type": "twitter_auth_start",
}
`;

exports[`IPC message snapshots ClientMessage types twitter_auth_status serializes to expected JSON 1`] = `
{
  "type": "twitter_auth_status",
}
`;

exports[`IPC message snapshots ClientMessage types link_open_request serializes to expected JSON 1`] = `
{
  "type": "link_open_request",
  "url": "https://example.com",
}
`;

exports[`IPC message snapshots ClientMessage types ui_surface_undo serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "surfaceId": "surface-001",
  "type": "ui_surface_undo",
}
`;

exports[`IPC message snapshots ClientMessage types publish_page serializes to expected JSON 1`] = `
{
  "html": "<html><body>Hello</body></html>",
  "type": "publish_page",
}
`;

exports[`IPC message snapshots ClientMessage types unpublish_page serializes to expected JSON 1`] = `
{
  "deploymentId": "dpl-001",
  "type": "unpublish_page",
}
`;

exports[`IPC message snapshots ClientMessage types diagnostics_export_request serializes to expected JSON 1`] = `
{
  "anchorMessageId": "msg-042",
  "conversationId": "conv-001",
  "type": "diagnostics_export_request",
}
`;

exports[`IPC message snapshots ClientMessage types accept_starter_bundle serializes to expected JSON 1`] = `
{
  "type": "accept_starter_bundle",
}
`;

exports[`IPC message snapshots ClientMessage types env_vars_request serializes to expected JSON 1`] = `
{
  "type": "env_vars_request",
}
`;

exports[`IPC message snapshots ClientMessage types integration_list serializes to expected JSON 1`] = `
{
  "type": "integration_list",
}
`;

exports[`IPC message snapshots ClientMessage types integration_connect serializes to expected JSON 1`] = `
{
  "integrationId": "gmail",
  "type": "integration_connect",
}
`;

exports[`IPC message snapshots ClientMessage types integration_disconnect serializes to expected JSON 1`] = `
{
  "integrationId": "gmail",
  "type": "integration_disconnect",
}
`;

exports[`IPC message snapshots ClientMessage types oauth_connect_start serializes to expected JSON 1`] = `
{
  "requestedScopes": [
    "https://www.googleapis.com/auth/gmail.readonly",
  ],
  "service": "gmail",
  "type": "oauth_connect_start",
}
`;

exports[`IPC message snapshots ClientMessage types work_items_list serializes to expected JSON 1`] = `
{
  "status": "queued",
  "type": "work_items_list",
}
`;

exports[`IPC message snapshots ClientMessage types work_item_get serializes to expected JSON 1`] = `
{
  "id": "wi-001",
  "type": "work_item_get",
}
`;

exports[`IPC message snapshots ClientMessage types work_item_update serializes to expected JSON 1`] = `
{
  "id": "wi-001",
  "status": "running",
  "title": "Updated title",
  "type": "work_item_update",
}
`;

exports[`IPC message snapshots ClientMessage types work_item_complete serializes to expected JSON 1`] = `
{
  "id": "wi-001",
  "type": "work_item_complete",
}
`;

exports[`IPC message snapshots ClientMessage types work_item_delete serializes to expected JSON 1`] = `
{
  "id": "wi-001",
  "type": "work_item_delete",
}
`;

exports[`IPC message snapshots ClientMessage types work_item_run_task serializes to expected JSON 1`] = `
{
  "id": "wi-001",
  "type": "work_item_run_task",
}
`;

exports[`IPC message snapshots ClientMessage types work_item_output serializes to expected JSON 1`] = `
{
  "id": "wi-001",
  "type": "work_item_output",
}
`;

exports[`IPC message snapshots ClientMessage types work_item_preflight serializes to expected JSON 1`] = `
{
  "id": "wi-001",
  "type": "work_item_preflight",
}
`;

exports[`IPC message snapshots ClientMessage types work_item_approve_permissions serializes to expected JSON 1`] = `
{
  "approvedTools": [
    "bash",
    "file_write",
  ],
  "id": "wi-001",
  "type": "work_item_approve_permissions",
}
`;

exports[`IPC message snapshots ClientMessage types work_item_cancel serializes to expected JSON 1`] = `
{
  "id": "wi-001",
  "type": "work_item_cancel",
}
`;

exports[`IPC message snapshots ClientMessage types document_save serializes to expected JSON 1`] = `
{
  "content": "# Hello",
  "conversationId": "conv-001",
  "surfaceId": "doc-001",
  "title": "My Document",
  "type": "document_save",
  "wordCount": 1,
}
`;

exports[`IPC message snapshots ClientMessage types document_load serializes to expected JSON 1`] = `
{
  "surfaceId": "doc-001",
  "type": "document_load",
}
`;

exports[`IPC message snapshots ClientMessage types document_list serializes to expected JSON 1`] = `
{
  "conversationId": "conv-001",
  "type": "document_list",
}
`;

exports[`IPC message snapshots ClientMessage types subagent_abort serializes to expected JSON 1`] = `
{
  "subagentId": "sub-001",
  "type": "subagent_abort",
}
`;

exports[`IPC message snapshots ClientMessage types subagent_status serializes to expected JSON 1`] = `
{
  "subagentId": "sub-001",
  "type": "subagent_status",
}
`;

exports[`IPC message snapshots ClientMessage types subagent_message serializes to expected JSON 1`] = `
{
  "content": "Hello subagent",
  "subagentId": "sub-001",
  "type": "subagent_message",
}
`;

exports[`IPC message snapshots ClientMessage types subagent_detail_request serializes to expected JSON 1`] = `
{
  "conversationId": "conv-001",
  "subagentId": "sub-001",
  "type": "subagent_detail_request",
}
`;

exports[`IPC message snapshots ClientMessage types workspace_files_list serializes to expected JSON 1`] = `
{
  "type": "workspace_files_list",
}
`;

exports[`IPC message snapshots ClientMessage types workspace_file_read serializes to expected JSON 1`] = `
{
  "path": "IDENTITY.md",
  "type": "workspace_file_read",
}
`;

exports[`IPC message snapshots ClientMessage types identity_get serializes to expected JSON 1`] = `
{
  "type": "identity_get",
}
`;

exports[`IPC message snapshots ClientMessage types tool_permission_simulate serializes to expected JSON 1`] = `
{
  "forcePromptSideEffects": false,
  "input": {
    "command": "rm -rf /tmp/test",
  },
  "isInteractive": true,
  "toolName": "bash",
  "type": "tool_permission_simulate",
  "workingDir": "/projects/my-app",
}
`;

exports[`IPC message snapshots ClientMessage types tool_names_list serializes to expected JSON 1`] = `
{
  "type": "tool_names_list",
}
`;

exports[`IPC message snapshots ClientMessage types dictation_request serializes to expected JSON 1`] = `
{
  "context": {
    "appName": "Example App",
    "bundleIdentifier": "com.example.app",
    "cursorInTextField": true,
    "selectedText": "some selected text",
    "windowTitle": "Main Window",
  },
  "transcription": "Hello world",
  "type": "dictation_request",
}
`;

exports[`IPC message snapshots ClientMessage types contacts_invite serializes to expected JSON 1`] = `
{
  "action": "create",
  "expiresInMs": 86400000,
  "maxUses": 5,
  "note": "Test invite",
  "sourceChannel": "telegram",
  "type": "contacts_invite",
}
`;

exports[`IPC message snapshots ClientMessage types assistant_inbox_escalation serializes to expected JSON 1`] = `
{
  "action": "list",
  "assistantId": "asst-001",
  "status": "pending",
  "type": "assistant_inbox_escalation",
}
`;

exports[`IPC message snapshots ClientMessage types pairing_approval_response serializes to expected JSON 1`] = `
{
  "decision": "approve_once",
  "pairingRequestId": "pair-001",
  "type": "pairing_approval_response",
}
`;

exports[`IPC message snapshots ClientMessage types approved_devices_list serializes to expected JSON 1`] = `
{
  "type": "approved_devices_list",
}
`;

exports[`IPC message snapshots ClientMessage types approved_device_remove serializes to expected JSON 1`] = `
{
  "hashedDeviceId": "hashed-device-001",
  "type": "approved_device_remove",
}
`;

exports[`IPC message snapshots ClientMessage types approved_devices_clear serializes to expected JSON 1`] = `
{
  "type": "approved_devices_clear",
}
`;

exports[`IPC message snapshots ClientMessage types notification_intent_result serializes to expected JSON 1`] = `
{
  "deliveryId": "delivery-001",
  "success": true,
  "type": "notification_intent_result",
}
`;

exports[`IPC message snapshots ClientMessage types conversation_seen_signal serializes to expected JSON 1`] = `
{
  "confidence": "explicit",
  "conversationId": "conv-001",
  "evidenceText": "User clicked View on notification",
  "metadata": {
    "notificationCategory": "NOTIFICATION_INTENT",
  },
  "observedAt": 1700000000000,
  "signalType": "macos_notification_view",
  "source": "notification-action",
  "sourceChannel": "vellum",
  "type": "conversation_seen_signal",
}
`;

exports[`IPC message snapshots ClientMessage types conversation_unread_signal serializes to expected JSON 1`] = `
{
  "confidence": "explicit",
  "conversationId": "conv-001",
  "evidenceText": "User selected Mark as unread",
  "metadata": {
    "trigger": "context-menu",
  },
  "observedAt": 1700000000000,
  "signalType": "macos_conversation_opened",
  "source": "ui-navigation",
  "sourceChannel": "vellum",
  "type": "conversation_unread_signal",
}
`;

exports[`IPC message snapshots ClientMessage types recording_status serializes to expected JSON 1`] = `
{
  "sessionId": "rec-001",
  "status": "started",
  "type": "recording_status",
}
`;

exports[`IPC message snapshots ClientMessage types heartbeat_config serializes to expected JSON 1`] = `
{
  "action": "get",
  "type": "heartbeat_config",
}
`;

exports[`IPC message snapshots ClientMessage types heartbeat_runs_list serializes to expected JSON 1`] = `
{
  "type": "heartbeat_runs_list",
}
`;

exports[`IPC message snapshots ClientMessage types heartbeat_run_now serializes to expected JSON 1`] = `
{
  "type": "heartbeat_run_now",
}
`;

exports[`IPC message snapshots ClientMessage types heartbeat_checklist_read serializes to expected JSON 1`] = `
{
  "type": "heartbeat_checklist_read",
}
`;

exports[`IPC message snapshots ClientMessage types heartbeat_checklist_write serializes to expected JSON 1`] = `
{
  "content": 
"- [ ] Check email
- [ ] Review PRs"
,
  "type": "heartbeat_checklist_write",
}
`;

exports[`IPC message snapshots ClientMessage types voice_config_update serializes to expected JSON 1`] = `
{
  "activationKey": "fn",
  "type": "voice_config_update",
}
`;

exports[`IPC message snapshots ClientMessage types generate_avatar serializes to expected JSON 1`] = `
{
  "description": "a friendly purple cat with green eyes wearing a tiny hat",
  "type": "generate_avatar",
}
`;

exports[`IPC message snapshots ClientMessage types guardian_actions_pending_request serializes to expected JSON 1`] = `
{
  "conversationId": "conv-guardian-001",
  "type": "guardian_actions_pending_request",
}
`;

exports[`IPC message snapshots ClientMessage types guardian_action_decision serializes to expected JSON 1`] = `
{
  "action": "approve_once",
  "conversationId": "conv-guardian-001",
  "requestId": "req-guardian-001",
  "type": "guardian_action_decision",
}
`;

exports[`IPC message snapshots ClientMessage types reorder_threads serializes to expected JSON 1`] = `
{
  "type": "reorder_threads",
  "updates": [
    {
      "displayOrder": 0,
      "isPinned": false,
      "sessionId": "sess-001",
    },
    {
      "displayOrder": 1,
      "isPinned": true,
      "sessionId": "sess-002",
    },
  ],
}
`;

exports[`IPC message snapshots ServerMessage types auth_result serializes to expected JSON 1`] = `
{
  "success": true,
  "type": "auth_result",
}
`;

exports[`IPC message snapshots ServerMessage types user_message_echo serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "text": "Check the weather for me",
  "type": "user_message_echo",
}
`;

exports[`IPC message snapshots ServerMessage types assistant_text_delta serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "text": "Here is some output",
  "type": "assistant_text_delta",
}
`;

exports[`IPC message snapshots ServerMessage types assistant_thinking_delta serializes to expected JSON 1`] = `
{
  "thinking": "Let me consider this...",
  "type": "assistant_thinking_delta",
}
`;

exports[`IPC message snapshots ServerMessage types tool_use_start serializes to expected JSON 1`] = `
{
  "input": {
    "command": "ls -la",
  },
  "toolName": "bash",
  "type": "tool_use_start",
}
`;

exports[`IPC message snapshots ServerMessage types tool_output_chunk serializes to expected JSON 1`] = `
{
  "chunk": 
"file1.ts
file2.ts
"
,
  "type": "tool_output_chunk",
}
`;

exports[`IPC message snapshots ServerMessage types tool_input_delta serializes to expected JSON 1`] = `
{
  "content": "{"html": "<div>Hello</div>"}",
  "sessionId": "sess-001",
  "toolName": "app_create",
  "type": "tool_input_delta",
}
`;

exports[`IPC message snapshots ServerMessage types tool_result serializes to expected JSON 1`] = `
{
  "diff": {
    "filePath": "/tmp/test.ts",
    "isNewFile": false,
    "newContent": "const x = 2;",
    "oldContent": "const x = 1;",
  },
  "isError": false,
  "result": "Command completed successfully",
  "status": "success",
  "toolName": "bash",
  "type": "tool_result",
}
`;

exports[`IPC message snapshots ServerMessage types secret_request serializes to expected JSON 1`] = `
{
  "allowOneTimeSend": false,
  "allowedDomains": [
    "github.com",
  ],
  "allowedTools": [
    "browser_fill_credential",
  ],
  "description": "Needed to push changes",
  "field": "token",
  "label": "GitHub Personal Access Token",
  "placeholder": "ghp_xxxxxxxxxxxx",
  "purpose": "Push code changes to GitHub",
  "requestId": "req-secret-001",
  "service": "github",
  "sessionId": "sess-001",
  "type": "secret_request",
}
`;

exports[`IPC message snapshots ServerMessage types confirmation_request serializes to expected JSON 1`] = `
{
  "allowlistOptions": [
    {
      "description": "Allow rm commands",
      "label": "Allow rm commands",
      "pattern": "bash:rm *",
    },
  ],
  "diff": {
    "filePath": "/tmp/test.ts",
    "isNewFile": false,
    "newContent": "new",
    "oldContent": "old",
  },
  "executionTarget": "sandbox",
  "input": {
    "command": "rm -rf /tmp/test",
  },
  "requestId": "req-002",
  "riskLevel": "high",
  "sandboxed": false,
  "scopeOptions": [
    {
      "label": "In /tmp",
      "scope": "/tmp",
    },
  ],
  "sessionId": "sess-001",
  "toolName": "bash",
  "type": "confirmation_request",
}
`;

exports[`IPC message snapshots ServerMessage types confirmation_state_changed serializes to expected JSON 1`] = `
{
  "causedByRequestId": "req-003",
  "decisionText": "approve",
  "requestId": "req-002",
  "sessionId": "sess-001",
  "source": "inline_nl",
  "state": "approved",
  "type": "confirmation_state_changed",
}
`;

exports[`IPC message snapshots ServerMessage types contacts_response serializes to expected JSON 1`] = `
{
  "contacts": [],
  "success": true,
  "type": "contacts_response",
}
`;

exports[`IPC message snapshots ServerMessage types contacts_changed serializes to expected JSON 1`] = `
{
  "type": "contacts_changed",
}
`;

exports[`IPC message snapshots ServerMessage types assistant_activity_state serializes to expected JSON 1`] = `
{
  "activityVersion": 1,
  "anchor": "assistant_turn",
  "phase": "thinking",
  "reason": "message_dequeued",
  "requestId": "req-003",
  "sessionId": "sess-001",
  "type": "assistant_activity_state",
}
`;

exports[`IPC message snapshots ServerMessage types message_complete serializes to expected JSON 1`] = `
{
  "attachments": [
    {
      "data": "iVBORw0K",
      "filename": "chart.png",
      "mimeType": "image/png",
    },
  ],
  "sessionId": "sess-001",
  "type": "message_complete",
}
`;

exports[`IPC message snapshots ServerMessage types message_request_complete serializes to expected JSON 1`] = `
{
  "requestId": "req-inline-001",
  "runStillActive": true,
  "sessionId": "sess-001",
  "type": "message_request_complete",
}
`;

exports[`IPC message snapshots ServerMessage types session_info serializes to expected JSON 1`] = `
{
  "correlationId": "corr-001",
  "sessionId": "sess-001",
  "threadType": "standard",
  "title": "My session",
  "type": "session_info",
}
`;

exports[`IPC message snapshots ServerMessage types session_title_updated serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "title": "Plan sprint rollout",
  "type": "session_title_updated",
}
`;

exports[`IPC message snapshots ServerMessage types session_list_response serializes to expected JSON 1`] = `
{
  "sessions": [
    {
      "createdAt": 1699999000,
      "id": "sess-001",
      "threadType": "standard",
      "title": "First session",
      "updatedAt": 1700000000,
    },
    {
      "assistantAttention": {
        "hasUnseenLatestAssistantMessage": true,
        "lastSeenConfidence": "explicit",
        "lastSeenSignalType": "macos_notification_view",
        "latestAssistantMessageAt": 1700001000,
      },
      "createdAt": 1700000000,
      "id": "sess-002",
      "threadType": "standard",
      "title": "Second session",
      "updatedAt": 1700001000,
    },
  ],
  "type": "session_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types sessions_clear_response serializes to expected JSON 1`] = `
{
  "cleared": 3,
  "type": "sessions_clear_response",
}
`;

exports[`IPC message snapshots ServerMessage types conversation_search_response serializes to expected JSON 1`] = `
{
  "query": "hello world",
  "results": [
    {
      "conversationId": "conv-001",
      "conversationTitle": "My Conversation",
      "conversationUpdatedAt": 1700000000,
      "matchingMessages": [
        {
          "createdAt": 1699999000,
          "excerpt": "…hello world, how are you?…",
          "messageId": "msg-001",
          "role": "user",
        },
      ],
    },
  ],
  "type": "conversation_search_response",
}
`;

exports[`IPC message snapshots ServerMessage types message_content_response serializes to expected JSON 1`] = `
{
  "messageId": "msg-001",
  "sessionId": "sess-001",
  "text": "Full message content here",
  "toolCalls": [
    {
      "input": {
        "command": "ls",
      },
      "name": "bash",
      "result": "output",
    },
  ],
  "type": "message_content_response",
}
`;

exports[`IPC message snapshots ServerMessage types error serializes to expected JSON 1`] = `
{
  "message": "Something went wrong",
  "type": "error",
}
`;

exports[`IPC message snapshots ServerMessage types pong serializes to expected JSON 1`] = `
{
  "type": "pong",
}
`;

exports[`IPC message snapshots ServerMessage types daemon_status serializes to expected JSON 1`] = `
{
  "httpPort": 7821,
  "type": "daemon_status",
}
`;

exports[`IPC message snapshots ServerMessage types generation_cancelled serializes to expected JSON 1`] = `
{
  "type": "generation_cancelled",
}
`;

exports[`IPC message snapshots ServerMessage types generation_handoff serializes to expected JSON 1`] = `
{
  "attachments": [
    {
      "data": "JVBER",
      "filename": "report.pdf",
      "mimeType": "application/pdf",
    },
  ],
  "queuedCount": 2,
  "requestId": "req-handoff-001",
  "sessionId": "sess-001",
  "type": "generation_handoff",
}
`;

exports[`IPC message snapshots ServerMessage types model_info serializes to expected JSON 1`] = `
{
  "model": "claude-opus-4-6",
  "provider": "anthropic",
  "type": "model_info",
}
`;

exports[`IPC message snapshots ServerMessage types history_response serializes to expected JSON 1`] = `
{
  "hasMore": false,
  "messages": [
    {
      "role": "user",
      "text": "Hello",
      "timestamp": 1700000000,
    },
    {
      "attachments": [
        {
          "data": "iVBORw0K",
          "filename": "result.png",
          "mimeType": "image/png",
        },
      ],
      "role": "assistant",
      "text": "Hi there!",
      "timestamp": 1700000001,
    },
  ],
  "sessionId": "sess-history-001",
  "type": "history_response",
}
`;

exports[`IPC message snapshots ServerMessage types undo_complete serializes to expected JSON 1`] = `
{
  "removedCount": 2,
  "sessionId": "session-abc",
  "type": "undo_complete",
}
`;

exports[`IPC message snapshots ServerMessage types usage_update serializes to expected JSON 1`] = `
{
  "estimatedCost": 0.025,
  "inputTokens": 150,
  "model": "claude-opus-4-6",
  "outputTokens": 50,
  "totalInputTokens": 1500,
  "totalOutputTokens": 500,
  "type": "usage_update",
}
`;

exports[`IPC message snapshots ServerMessage types usage_response serializes to expected JSON 1`] = `
{
  "estimatedCost": 0.025,
  "model": "claude-opus-4-6",
  "totalInputTokens": 1500,
  "totalOutputTokens": 500,
  "type": "usage_response",
}
`;

exports[`IPC message snapshots ServerMessage types context_compacted serializes to expected JSON 1`] = `
{
  "compactedMessages": 56,
  "estimatedInputTokens": 108000,
  "maxInputTokens": 180000,
  "previousEstimatedInputTokens": 220000,
  "summaryCalls": 3,
  "summaryInputTokens": 4200,
  "summaryModel": "claude-opus-4-6",
  "summaryOutputTokens": 900,
  "thresholdTokens": 144000,
  "type": "context_compacted",
}
`;

exports[`IPC message snapshots ServerMessage types secret_detected serializes to expected JSON 1`] = `
{
  "action": "redact",
  "matches": [
    {
      "redactedValue": "sk-****abcd",
      "type": "api_key",
    },
  ],
  "toolName": "bash",
  "type": "secret_detected",
}
`;

exports[`IPC message snapshots ServerMessage types memory_recalled serializes to expected JSON 1`] = `
{
  "earlyTerminated": false,
  "entityHits": 3,
  "injectedTokens": 480,
  "latencyMs": 55,
  "lexicalHits": 12,
  "mergedCount": 18,
  "model": "text-embedding-3-small",
  "provider": "openai",
  "recencyHits": 6,
  "relationExpandedItemCount": 4,
  "relationNeighborEntityCount": 3,
  "relationSeedEntityCount": 2,
  "relationTraversedEdgeCount": 5,
  "rerankApplied": false,
  "selectedCount": 10,
  "semanticHits": 8,
  "topCandidates": [
    {
      "finalScore": 0.85,
      "key": "segment:seg-1",
      "kind": "fact",
      "lexical": 0.9,
      "recency": 0.3,
      "semantic": 0.7,
      "type": "segment",
    },
    {
      "finalScore": 0.72,
      "key": "item:item-1",
      "kind": "preference",
      "lexical": 0.6,
      "recency": 0.1,
      "semantic": 0.8,
      "type": "item",
    },
  ],
  "type": "memory_recalled",
}
`;

exports[`IPC message snapshots ServerMessage types memory_status serializes to expected JSON 1`] = `
{
  "cleanupResolvedJobsCompleted24h": 12,
  "cleanupResolvedJobsPending": 1,
  "cleanupSupersededJobsCompleted24h": 8,
  "cleanupSupersededJobsPending": 0,
  "conflictsPending": 2,
  "conflictsResolved": 7,
  "degraded": false,
  "enabled": true,
  "model": "text-embedding-3-small",
  "oldestPendingConflictAgeMs": 90000,
  "provider": "openai",
  "type": "memory_status",
}
`;

exports[`IPC message snapshots ServerMessage types cu_action serializes to expected JSON 1`] = `
{
  "input": {
    "x": 100,
    "y": 200,
  },
  "reasoning": "Clicking the search button",
  "sessionId": "cu-sess-001",
  "stepNumber": 1,
  "toolName": "click",
  "type": "cu_action",
}
`;

exports[`IPC message snapshots ServerMessage types cu_complete serializes to expected JSON 1`] = `
{
  "sessionId": "cu-sess-001",
  "stepCount": 5,
  "summary": "Successfully opened Safari and searched for weather",
  "type": "cu_complete",
}
`;

exports[`IPC message snapshots ServerMessage types cu_error serializes to expected JSON 1`] = `
{
  "message": "Session timed out after 30 steps",
  "sessionId": "cu-sess-001",
  "type": "cu_error",
}
`;

exports[`IPC message snapshots ServerMessage types task_routed serializes to expected JSON 1`] = `
{
  "interactionType": "computer_use",
  "sessionId": "sess-routed-001",
  "type": "task_routed",
}
`;

exports[`IPC message snapshots ServerMessage types ride_shotgun_error serializes to expected JSON 1`] = `
{
  "message": "Failed to start browser — Chrome CDP could not be launched.",
  "sessionId": "sess-shotgun-001",
  "type": "ride_shotgun_error",
  "watchId": "watch-shotgun-001",
}
`;

exports[`IPC message snapshots ServerMessage types ride_shotgun_progress serializes to expected JSON 1`] = `
{
  "message": "Observing user activity...",
  "type": "ride_shotgun_progress",
  "watchId": "watch-shotgun-001",
}
`;

exports[`IPC message snapshots ServerMessage types ride_shotgun_result serializes to expected JSON 1`] = `
{
  "observationCount": 5,
  "sessionId": "sess-shotgun-001",
  "summary": "User was debugging a test failure",
  "type": "ride_shotgun_result",
  "watchId": "watch-shotgun-001",
}
`;

exports[`IPC message snapshots ServerMessage types ui_surface_show serializes to expected JSON 1`] = `
{
  "actions": [
    {
      "id": "dismiss",
      "label": "OK",
      "style": "primary",
    },
  ],
  "data": {
    "body": "All tests passed.",
    "title": "Build Complete",
  },
  "sessionId": "sess-001",
  "surfaceId": "surface-001",
  "surfaceType": "card",
  "title": "Status Update",
  "type": "ui_surface_show",
}
`;

exports[`IPC message snapshots ServerMessage types ui_surface_update serializes to expected JSON 1`] = `
{
  "data": {
    "body": "Updated body text.",
  },
  "sessionId": "sess-001",
  "surfaceId": "surface-001",
  "type": "ui_surface_update",
}
`;

exports[`IPC message snapshots ServerMessage types ui_surface_dismiss serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "surfaceId": "surface-001",
  "type": "ui_surface_dismiss",
}
`;

exports[`IPC message snapshots ServerMessage types ui_surface_complete serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "summary": "Confirmed",
  "surfaceId": "surface-001",
  "type": "ui_surface_complete",
}
`;

exports[`IPC message snapshots ServerMessage types app_data_response serializes to expected JSON 1`] = `
{
  "callId": "call-001",
  "result": [
    {
      "appId": "app-001",
      "createdAt": 1700000000,
      "data": {
        "name": "Test",
      },
      "id": "rec-001",
      "updatedAt": 1700000000,
    },
  ],
  "success": true,
  "surfaceId": "surface-001",
  "type": "app_data_response",
}
`;

exports[`IPC message snapshots ServerMessage types skills_list_response serializes to expected JSON 1`] = `
{
  "skills": [
    {
      "degraded": false,
      "description": "A test skill",
      "emoji": "🔧",
      "id": "my-skill",
      "name": "My Skill",
      "provenance": {
        "kind": "first-party",
        "provider": "Vellum",
      },
      "source": "bundled",
      "state": "enabled",
      "updateAvailable": false,
      "userInvocable": true,
    },
  ],
  "type": "skills_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types skills_state_changed serializes to expected JSON 1`] = `
{
  "name": "my-skill",
  "state": "enabled",
  "type": "skills_state_changed",
}
`;

exports[`IPC message snapshots ServerMessage types skills_operation_response serializes to expected JSON 1`] = `
{
  "operation": "enable",
  "success": true,
  "type": "skills_operation_response",
}
`;

exports[`IPC message snapshots ServerMessage types skill_detail_response serializes to expected JSON 1`] = `
{
  "body": 
"# Skill content

Do the thing."
,
  "skillId": "my-skill",
  "type": "skill_detail_response",
}
`;

exports[`IPC message snapshots ServerMessage types skills_inspect_response serializes to expected JSON 1`] = `
{
  "data": {
    "createdAt": 1700000000,
    "files": [
      {
        "path": "SKILL.md",
        "size": 1024,
      },
    ],
    "latestVersion": {
      "changelog": "Bug fixes",
      "version": "1.2.0",
    },
    "owner": {
      "displayName": "ClaWHub",
      "handle": "clawhub",
    },
    "skill": {
      "displayName": "My Skill",
      "slug": "clawhub/my-skill",
      "summary": "A test skill",
    },
    "skillMdContent": 
"# My Skill

Does things."
,
    "stats": {
      "downloads": 5000,
      "installs": 1000,
      "stars": 42,
      "versions": 3,
    },
    "updatedAt": 1700001000,
  },
  "slug": "clawhub/my-skill",
  "type": "skills_inspect_response",
}
`;

exports[`IPC message snapshots ServerMessage types skills_draft_response serializes to expected JSON 1`] = `
{
  "draft": {
    "bodyMarkdown": 
"# Weather

Fetches weather data."
,
    "description": "Fetches current weather",
    "emoji": "🌤️",
    "name": "Weather Skill",
    "skillId": "weather-skill",
  },
  "success": true,
  "type": "skills_draft_response",
  "warnings": [],
}
`;

exports[`IPC message snapshots ServerMessage types suggestion_response serializes to expected JSON 1`] = `
{
  "requestId": "req-suggest-001",
  "source": "llm",
  "suggestion": "Tell me more about that",
  "type": "suggestion_response",
}
`;

exports[`IPC message snapshots ServerMessage types message_queued serializes to expected JSON 1`] = `
{
  "position": 1,
  "requestId": "req-queue-001",
  "sessionId": "sess-001",
  "type": "message_queued",
}
`;

exports[`IPC message snapshots ServerMessage types message_dequeued serializes to expected JSON 1`] = `
{
  "requestId": "req-queue-001",
  "sessionId": "sess-001",
  "type": "message_dequeued",
}
`;

exports[`IPC message snapshots ServerMessage types message_queued_deleted serializes to expected JSON 1`] = `
{
  "requestId": "req-queue-001",
  "sessionId": "sess-001",
  "type": "message_queued_deleted",
}
`;

exports[`IPC message snapshots ServerMessage types notification_intent serializes to expected JSON 1`] = `
{
  "body": "Your assistant needs your input.",
  "deepLinkMetadata": {
    "conversationId": "conv-guardian-001",
  },
  "sourceEventName": "guardian.question",
  "title": "⚠️ Attention needed",
  "type": "notification_intent",
}
`;

exports[`IPC message snapshots ServerMessage types notification_thread_created serializes to expected JSON 1`] = `
{
  "conversationId": "conv-notif-001",
  "sourceEventName": "watcher.escalation",
  "title": "Weather alert for your area",
  "type": "notification_thread_created",
}
`;

exports[`IPC message snapshots ServerMessage types heartbeat_alert serializes to expected JSON 1`] = `
{
  "body": "No activity detected in the last 60 minutes.",
  "title": "Heartbeat stalled",
  "type": "heartbeat_alert",
}
`;

exports[`IPC message snapshots ServerMessage types watch_started serializes to expected JSON 1`] = `
{
  "durationSeconds": 300,
  "intervalSeconds": 5,
  "sessionId": "sess-001",
  "type": "watch_started",
  "watchId": "watch-001",
}
`;

exports[`IPC message snapshots ServerMessage types watch_complete_request serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "type": "watch_complete_request",
  "watchId": "watch-001",
}
`;

exports[`IPC message snapshots ServerMessage types trust_rules_list_response serializes to expected JSON 1`] = `
{
  "rules": [
    {
      "createdAt": 1700000000,
      "decision": "allow",
      "id": "rule-001",
      "pattern": "git *",
      "priority": 100,
      "scope": "/projects/my-app",
      "tool": "bash",
    },
  ],
  "type": "trust_rules_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types schedule_thread_created serializes to expected JSON 1`] = `
{
  "conversationId": "conv-sched-001",
  "scheduleJobId": "sched-job-001",
  "title": "Daily standup reminder",
  "type": "schedule_thread_created",
}
`;

exports[`IPC message snapshots ServerMessage types schedules_list_response serializes to expected JSON 1`] = `
{
  "schedules": [
    {
      "cronExpression": "0 9 * * 1-5",
      "description": "Every weekday at 9:00 AM",
      "enabled": true,
      "expression": "0 9 * * 1-5",
      "id": "sched-001",
      "lastRunAt": 1700000000000,
      "lastStatus": "ok",
      "message": "Remind me about the standup",
      "name": "Daily standup reminder",
      "nextRunAt": 1700100000000,
      "syntax": "cron",
      "timezone": "America/Los_Angeles",
    },
  ],
  "type": "schedules_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types reminders_list_response serializes to expected JSON 1`] = `
{
  "reminders": [
    {
      "createdAt": 1700000000000,
      "fireAt": 1700100000000,
      "firedAt": null,
      "id": "rem-001",
      "label": "Call Sidd",
      "message": "Remember to call Sidd about the project",
      "mode": "notify",
      "status": "pending",
    },
  ],
  "type": "reminders_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types bundle_app_response serializes to expected JSON 1`] = `
{
  "bundlePath": "/tmp/My_App-abc12345.vellum",
  "manifest": {
    "capabilities": [],
    "content_id": "a1b2c3d4e5f6a7b8",
    "created_at": "2026-01-01T00:00:00.000Z",
    "created_by": "vellum-assistant/0.1.6",
    "description": "A test app",
    "entry": "index.html",
    "format_version": 1,
    "name": "My App",
    "version": "1.0.0",
  },
  "type": "bundle_app_response",
}
`;

exports[`IPC message snapshots ServerMessage types apps_list_response serializes to expected JSON 1`] = `
{
  "apps": [
    {
      "contentId": "a1b2c3d4e5f6a7b8",
      "createdAt": 1700000000,
      "description": "A test app",
      "icon": "📱",
      "id": "app-001",
      "name": "My App",
      "preview": "iVBORw0KGgoAAAANSUhEUg==",
      "version": "1.0.0",
    },
  ],
  "type": "apps_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types home_base_get_response serializes to expected JSON 1`] = `
{
  "homeBase": {
    "appId": "home-base-001",
    "onboardingTasks": [
      "Make it mine",
      "Enable voice mode",
      "Enable computer control",
      "Try ambient mode",
    ],
    "preview": {
      "description": "Prebuilt onboarding + starter task canvas",
      "icon": "🏠",
      "metrics": [
        {
          "label": "Starter tasks",
          "value": "3",
        },
        {
          "label": "Onboarding tasks",
          "value": "4",
        },
      ],
      "subtitle": "Dashboard",
      "title": "Home Base",
    },
    "source": "prebuilt_seed",
    "starterTasks": [
      "Change the look and feel",
      "Research something for me about X",
      "Turn it into a webpage or interactive UI",
    ],
  },
  "type": "home_base_get_response",
}
`;

exports[`IPC message snapshots ServerMessage types shared_apps_list_response serializes to expected JSON 1`] = `
{
  "apps": [
    {
      "bundleSizeBytes": 4096,
      "contentId": "abcdef0123456789",
      "description": "A shared app",
      "entry": "index.html",
      "icon": "📱",
      "installedAt": "2026-01-15T00:00:00Z",
      "name": "Shared App",
      "preview": "iVBORw0KGgoAAAANSUhEUg==",
      "signerDisplayName": "Test User",
      "trustTier": "signed",
      "updateAvailable": true,
      "uuid": "abc-123-def",
      "version": "1.2.0",
    },
  ],
  "type": "shared_apps_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types app_delete_response serializes to expected JSON 1`] = `
{
  "success": true,
  "type": "app_delete_response",
}
`;

exports[`IPC message snapshots ServerMessage types shared_app_delete_response serializes to expected JSON 1`] = `
{
  "success": true,
  "type": "shared_app_delete_response",
}
`;

exports[`IPC message snapshots ServerMessage types fork_shared_app_response serializes to expected JSON 1`] = `
{
  "appId": "new-app-id",
  "name": "My App (Fork)",
  "success": true,
  "type": "fork_shared_app_response",
}
`;

exports[`IPC message snapshots ServerMessage types open_bundle_response serializes to expected JSON 1`] = `
{
  "bundleSizeBytes": 4096,
  "manifest": {
    "capabilities": [],
    "created_at": "2026-01-01T00:00:00.000Z",
    "created_by": "vellum-assistant/0.1.6",
    "description": "A test app",
    "entry": "index.html",
    "format_version": 1,
    "name": "My App",
  },
  "scanResult": {
    "blocked": [],
    "passed": true,
    "warnings": [
      "Use of fetch() detected",
    ],
  },
  "signatureResult": {
    "signerAccount": "test@example.com",
    "signerDisplayName": "Test Signer",
    "signerKeyId": "key-001",
    "trustTier": "signed",
  },
  "type": "open_bundle_response",
}
`;

exports[`IPC message snapshots ServerMessage types sign_bundle_payload serializes to expected JSON 1`] = `
{
  "payload": "{"content_hashes":{},"manifest":{}}",
  "requestId": "req-sign-001",
  "type": "sign_bundle_payload",
}
`;

exports[`IPC message snapshots ServerMessage types get_signing_identity serializes to expected JSON 1`] = `
{
  "requestId": "req-identity-001",
  "type": "get_signing_identity",
}
`;

exports[`IPC message snapshots ServerMessage types session_error serializes to expected JSON 1`] = `
{
  "code": "PROVIDER_NETWORK",
  "debugDetails": "ETIMEDOUT after 30000ms",
  "retryable": true,
  "sessionId": "sess-001",
  "type": "session_error",
  "userMessage": "Unable to reach the AI provider. Please try again.",
}
`;

exports[`IPC message snapshots ServerMessage types trace_event serializes to expected JSON 1`] = `
{
  "attributes": {
    "command": "ls -la",
    "riskLevel": "low",
    "sandboxed": true,
    "toolName": "bash",
  },
  "eventId": "evt-001",
  "kind": "tool_started",
  "requestId": "req-001",
  "sequence": 1,
  "sessionId": "sess-001",
  "status": "info",
  "summary": "Running bash: ls -la",
  "timestampMs": 1700000000000,
  "type": "trace_event",
}
`;

exports[`IPC message snapshots ServerMessage types ipc_blob_probe_result serializes to expected JSON 1`] = `
{
  "observedNonceSha256": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  "ok": true,
  "probeId": "aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee",
  "type": "ipc_blob_probe_result",
}
`;

exports[`IPC message snapshots ServerMessage types gallery_list_response serializes to expected JSON 1`] = `
{
  "gallery": {
    "apps": [],
    "categories": [
      {
        "icon": "📋",
        "id": "productivity",
        "name": "Productivity",
      },
    ],
    "updatedAt": "2026-02-15T00:00:00Z",
    "version": 1,
  },
  "type": "gallery_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types gallery_install_response serializes to expected JSON 1`] = `
{
  "appId": "app-new-001",
  "name": "Focus Timer",
  "success": true,
  "type": "gallery_install_response",
}
`;

exports[`IPC message snapshots ServerMessage types share_app_cloud_response serializes to expected JSON 1`] = `
{
  "shareToken": "abc123def456",
  "shareUrl": "http://localhost:7821/v1/apps/shared/abc123def456",
  "success": true,
  "type": "share_app_cloud_response",
}
`;

exports[`IPC message snapshots ServerMessage types slack_webhook_config_response serializes to expected JSON 1`] = `
{
  "success": true,
  "type": "slack_webhook_config_response",
  "webhookUrl": "https://hooks.slack.com/services/T00/B00/xxx",
}
`;

exports[`IPC message snapshots ServerMessage types ingress_config_response serializes to expected JSON 1`] = `
{
  "enabled": true,
  "localGatewayTarget": "http://127.0.0.1:7830",
  "publicBaseUrl": "https://example.com",
  "success": true,
  "type": "ingress_config_response",
}
`;

exports[`IPC message snapshots ServerMessage types platform_config_response serializes to expected JSON 1`] = `
{
  "baseUrl": "https://platform.vellum.ai",
  "success": true,
  "type": "platform_config_response",
}
`;

exports[`IPC message snapshots ServerMessage types vercel_api_config_response serializes to expected JSON 1`] = `
{
  "hasToken": true,
  "success": true,
  "type": "vercel_api_config_response",
}
`;

exports[`IPC message snapshots ServerMessage types twitter_integration_config_response serializes to expected JSON 1`] = `
{
  "connected": false,
  "localClientConfigured": true,
  "managedAvailable": false,
  "mode": "local_byo",
  "success": true,
  "type": "twitter_integration_config_response",
}
`;

exports[`IPC message snapshots ServerMessage types telegram_config_response serializes to expected JSON 1`] = `
{
  "botUsername": "my_test_bot",
  "connected": true,
  "hasBotToken": true,
  "hasWebhookSecret": true,
  "success": true,
  "type": "telegram_config_response",
}
`;

exports[`IPC message snapshots ServerMessage types guardian_verification_response serializes to expected JSON 1`] = `
{
  "instruction": "Send this code to the Telegram bot",
  "secret": "verify-secret-123",
  "success": true,
  "type": "guardian_verification_response",
}
`;

exports[`IPC message snapshots ServerMessage types twitter_auth_result serializes to expected JSON 1`] = `
{
  "accountInfo": "@vellum_test",
  "success": true,
  "type": "twitter_auth_result",
}
`;

exports[`IPC message snapshots ServerMessage types twitter_auth_status_response serializes to expected JSON 1`] = `
{
  "accountInfo": "@vellum_test",
  "connected": true,
  "mode": "local_byo",
  "type": "twitter_auth_status_response",
}
`;

exports[`IPC message snapshots ServerMessage types open_url serializes to expected JSON 1`] = `
{
  "title": "Example",
  "type": "open_url",
  "url": "https://example.com",
}
`;

exports[`IPC message snapshots ServerMessage types app_update_preview_response serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "success": true,
  "type": "app_update_preview_response",
}
`;

exports[`IPC message snapshots ServerMessage types app_preview_response serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "preview": "base64-png-data",
  "type": "app_preview_response",
}
`;

exports[`IPC message snapshots ServerMessage types app_history_response serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "type": "app_history_response",
  "versions": [
    {
      "commitHash": "abc123def456",
      "message": "Initial app commit",
      "timestamp": 1700000000,
    },
    {
      "commitHash": "789abc123def",
      "message": "Update landing page",
      "timestamp": 1700001000,
    },
  ],
}
`;

exports[`IPC message snapshots ServerMessage types app_diff_response serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "diff": "diff --git a/index.html b/index.html",
  "type": "app_diff_response",
}
`;

exports[`IPC message snapshots ServerMessage types app_file_at_version_response serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "content": "<html><body>Hello</body></html>",
  "path": "index.html",
  "type": "app_file_at_version_response",
}
`;

exports[`IPC message snapshots ServerMessage types app_restore_response serializes to expected JSON 1`] = `
{
  "success": true,
  "type": "app_restore_response",
}
`;

exports[`IPC message snapshots ServerMessage types ui_surface_undo_result serializes to expected JSON 1`] = `
{
  "remainingUndos": 3,
  "sessionId": "sess-001",
  "success": true,
  "surfaceId": "surface-001",
  "type": "ui_surface_undo_result",
}
`;

exports[`IPC message snapshots ServerMessage types publish_page_response serializes to expected JSON 1`] = `
{
  "deploymentId": "dpl-001",
  "publicUrl": "https://example.vercel.app",
  "success": true,
  "type": "publish_page_response",
}
`;

exports[`IPC message snapshots ServerMessage types unpublish_page_response serializes to expected JSON 1`] = `
{
  "success": true,
  "type": "unpublish_page_response",
}
`;

exports[`IPC message snapshots ServerMessage types app_files_changed serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "type": "app_files_changed",
}
`;

exports[`IPC message snapshots ServerMessage types diagnostics_export_response serializes to expected JSON 1`] = `
{
  "filePath": "/tmp/diagnostics-conv-001.zip",
  "success": true,
  "type": "diagnostics_export_response",
}
`;

exports[`IPC message snapshots ServerMessage types accept_starter_bundle_response serializes to expected JSON 1`] = `
{
  "accepted": true,
  "alreadyAccepted": false,
  "rulesAdded": 5,
  "type": "accept_starter_bundle_response",
}
`;

exports[`IPC message snapshots ServerMessage types env_vars_response serializes to expected JSON 1`] = `
{
  "type": "env_vars_response",
  "vars": {
    "HOME": "/Users/test",
    "PATH": "/usr/bin",
  },
}
`;

exports[`IPC message snapshots ServerMessage types integration_list_response serializes to expected JSON 1`] = `
{
  "integrations": [
    {
      "connected": false,
      "id": "gmail",
    },
  ],
  "type": "integration_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types integration_connect_result serializes to expected JSON 1`] = `
{
  "integrationId": "gmail",
  "success": true,
  "type": "integration_connect_result",
}
`;

exports[`IPC message snapshots ServerMessage types oauth_connect_result serializes to expected JSON 1`] = `
{
  "accountInfo": "user@example.com",
  "grantedScopes": [
    "https://www.googleapis.com/auth/gmail.readonly",
  ],
  "success": true,
  "type": "oauth_connect_result",
}
`;

exports[`IPC message snapshots ServerMessage types document_editor_show serializes to expected JSON 1`] = `
{
  "initialContent": "# Hello World",
  "sessionId": "sess-001",
  "surfaceId": "doc-001",
  "title": "My Document",
  "type": "document_editor_show",
}
`;

exports[`IPC message snapshots ServerMessage types document_editor_update serializes to expected JSON 1`] = `
{
  "markdown": "# Updated Content",
  "mode": "replace",
  "sessionId": "sess-001",
  "surfaceId": "doc-001",
  "type": "document_editor_update",
}
`;

exports[`IPC message snapshots ServerMessage types document_save_response serializes to expected JSON 1`] = `
{
  "success": true,
  "surfaceId": "doc-001",
  "type": "document_save_response",
}
`;

exports[`IPC message snapshots ServerMessage types document_load_response serializes to expected JSON 1`] = `
{
  "content": "# Hello",
  "conversationId": "conv-001",
  "createdAt": 1700000000,
  "success": true,
  "surfaceId": "doc-001",
  "title": "My Document",
  "type": "document_load_response",
  "updatedAt": 1700001000,
  "wordCount": 1,
}
`;

exports[`IPC message snapshots ServerMessage types document_list_response serializes to expected JSON 1`] = `
{
  "documents": [
    {
      "conversationId": "conv-001",
      "createdAt": 1700000000,
      "surfaceId": "doc-001",
      "title": "My Document",
      "updatedAt": 1700001000,
      "wordCount": 100,
    },
  ],
  "type": "document_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types work_items_list_response serializes to expected JSON 1`] = `
{
  "items": [
    {
      "createdAt": 1700000000,
      "id": "wi-001",
      "lastRunConversationId": null,
      "lastRunId": null,
      "lastRunStatus": null,
      "notes": null,
      "priorityTier": 1,
      "sortIndex": null,
      "sourceId": null,
      "sourceType": null,
      "status": "queued",
      "taskId": "task-001",
      "title": "Process report",
      "updatedAt": 1700000000,
    },
  ],
  "type": "work_items_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types work_item_get_response serializes to expected JSON 1`] = `
{
  "item": {
    "createdAt": 1700000000,
    "id": "wi-001",
    "lastRunConversationId": null,
    "lastRunId": null,
    "lastRunStatus": null,
    "notes": null,
    "priorityTier": 1,
    "sortIndex": null,
    "sourceId": null,
    "sourceType": null,
    "status": "queued",
    "taskId": "task-001",
    "title": "Process report",
    "updatedAt": 1700000000,
  },
  "type": "work_item_get_response",
}
`;

exports[`IPC message snapshots ServerMessage types work_item_update_response serializes to expected JSON 1`] = `
{
  "item": {
    "createdAt": 1700000000,
    "id": "wi-001",
    "lastRunConversationId": null,
    "lastRunId": null,
    "lastRunStatus": null,
    "notes": null,
    "priorityTier": 1,
    "sortIndex": null,
    "sourceId": null,
    "sourceType": null,
    "status": "running",
    "taskId": "task-001",
    "title": "Updated title",
    "updatedAt": 1700001000,
  },
  "type": "work_item_update_response",
}
`;

exports[`IPC message snapshots ServerMessage types work_item_delete_response serializes to expected JSON 1`] = `
{
  "id": "wi-001",
  "success": true,
  "type": "work_item_delete_response",
}
`;

exports[`IPC message snapshots ServerMessage types work_item_run_task_response serializes to expected JSON 1`] = `
{
  "id": "wi-001",
  "lastRunId": "run-001",
  "success": true,
  "type": "work_item_run_task_response",
}
`;

exports[`IPC message snapshots ServerMessage types work_item_output_response serializes to expected JSON 1`] = `
{
  "id": "wi-001",
  "output": {
    "completedAt": 1700002000,
    "conversationId": "conv-001",
    "highlights": [
      "- Key finding 1",
      "- Key finding 2",
    ],
    "runId": "run-001",
    "status": "completed",
    "summary": "Report processed successfully.",
    "title": "Process report",
  },
  "success": true,
  "type": "work_item_output_response",
}
`;

exports[`IPC message snapshots ServerMessage types work_item_preflight_response serializes to expected JSON 1`] = `
{
  "id": "wi-001",
  "permissions": [
    {
      "currentDecision": "prompt",
      "description": "Run shell commands",
      "riskLevel": "medium",
      "tool": "bash",
    },
  ],
  "success": true,
  "type": "work_item_preflight_response",
}
`;

exports[`IPC message snapshots ServerMessage types work_item_approve_permissions_response serializes to expected JSON 1`] = `
{
  "id": "wi-001",
  "success": true,
  "type": "work_item_approve_permissions_response",
}
`;

exports[`IPC message snapshots ServerMessage types work_item_cancel_response serializes to expected JSON 1`] = `
{
  "id": "wi-001",
  "success": true,
  "type": "work_item_cancel_response",
}
`;

exports[`IPC message snapshots ServerMessage types work_item_status_changed serializes to expected JSON 1`] = `
{
  "item": {
    "id": "wi-001",
    "lastRunConversationId": "conv-001",
    "lastRunId": "run-001",
    "lastRunStatus": "completed",
    "status": "awaiting_review",
    "taskId": "task-001",
    "title": "Process report",
    "updatedAt": 1700001000,
  },
  "type": "work_item_status_changed",
}
`;

exports[`IPC message snapshots ServerMessage types tasks_changed serializes to expected JSON 1`] = `
{
  "type": "tasks_changed",
}
`;

exports[`IPC message snapshots ServerMessage types task_run_thread_created serializes to expected JSON 1`] = `
{
  "conversationId": "conv-task-run-001",
  "title": "Process report",
  "type": "task_run_thread_created",
  "workItemId": "wi-001",
}
`;

exports[`IPC message snapshots ServerMessage types subagent_spawned serializes to expected JSON 1`] = `
{
  "label": "Research Agent",
  "objective": "Find relevant documentation",
  "parentSessionId": "sess-001",
  "subagentId": "sub-001",
  "type": "subagent_spawned",
}
`;

exports[`IPC message snapshots ServerMessage types subagent_status_changed serializes to expected JSON 1`] = `
{
  "status": "completed",
  "subagentId": "sub-001",
  "type": "subagent_status_changed",
}
`;

exports[`IPC message snapshots ServerMessage types subagent_event serializes to expected JSON 1`] = `
{
  "event": {
    "sessionId": "sub-sess-001",
    "text": "Searching for docs...",
    "type": "assistant_text_delta",
  },
  "subagentId": "sub-001",
  "type": "subagent_event",
}
`;

exports[`IPC message snapshots ServerMessage types subagent_detail_response serializes to expected JSON 1`] = `
{
  "events": [
    {
      "content": "Reading file...",
      "isError": false,
      "toolName": "read_file",
      "type": "tool_use",
    },
  ],
  "objective": "Search for documentation",
  "subagentId": "sub-001",
  "type": "subagent_detail_response",
}
`;

exports[`IPC message snapshots ServerMessage types workspace_files_list_response serializes to expected JSON 1`] = `
{
  "files": [
    {
      "exists": true,
      "name": "IDENTITY.md",
      "path": "IDENTITY.md",
    },
  ],
  "type": "workspace_files_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types workspace_file_read_response serializes to expected JSON 1`] = `
{
  "content": "# My Identity",
  "path": "IDENTITY.md",
  "type": "workspace_file_read_response",
}
`;

exports[`IPC message snapshots ServerMessage types identity_get_response serializes to expected JSON 1`] = `
{
  "emoji": "✨",
  "found": true,
  "home": "~/workspace",
  "name": "Vex",
  "personality": "Friendly",
  "role": "AI assistant",
  "type": "identity_get_response",
}
`;

exports[`IPC message snapshots ServerMessage types tool_permission_simulate_response serializes to expected JSON 1`] = `
{
  "decision": "prompt",
  "executionTarget": "host",
  "promptPayload": {
    "allowlistOptions": [
      {
        "description": "Allow rm commands",
        "label": "Allow rm commands",
        "pattern": "bash:rm *",
      },
    ],
    "persistentDecisionsAllowed": true,
    "scopeOptions": [
      {
        "label": "In /projects/my-app",
        "scope": "/projects/my-app",
      },
    ],
  },
  "reason": "No matching trust rule; tool requires approval",
  "riskLevel": "high",
  "success": true,
  "type": "tool_permission_simulate_response",
}
`;

exports[`IPC message snapshots ServerMessage types tool_names_list_response serializes to expected JSON 1`] = `
{
  "names": [
    "bash",
    "file_read",
    "file_write",
  ],
  "type": "tool_names_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types dictation_response serializes to expected JSON 1`] = `
{
  "mode": "dictation",
  "text": "Hello world",
  "type": "dictation_response",
}
`;

exports[`IPC message snapshots ServerMessage types contacts_invite_response serializes to expected JSON 1`] = `
{
  "invite": {
    "createdAt": 1700000000,
    "expiresAt": 1700100000000,
    "id": "inv-001",
    "maxUses": 5,
    "note": "Test invite",
    "sourceChannel": "telegram",
    "status": "active",
    "token": "tok-abc123",
    "tokenHash": "hash-abc123",
    "useCount": 0,
  },
  "success": true,
  "type": "contacts_invite_response",
}
`;

exports[`IPC message snapshots ServerMessage types assistant_inbox_escalation_response serializes to expected JSON 1`] = `
{
  "escalations": [
    {
      "channel": "telegram",
      "conversationId": "conv-001",
      "createdAt": 1700000000,
      "id": "esc-001",
      "requestSummary": "Access request from new user",
      "requesterChatId": "chat-456",
      "requesterExternalUserId": "user-123",
      "runId": "run-001",
      "status": "pending",
    },
  ],
  "success": true,
  "type": "assistant_inbox_escalation_response",
}
`;

exports[`IPC message snapshots ServerMessage types pairing_approval_request serializes to expected JSON 1`] = `
{
  "deviceId": "device-001",
  "deviceName": "iPhone 15",
  "pairingRequestId": "pair-001",
  "type": "pairing_approval_request",
}
`;

exports[`IPC message snapshots ServerMessage types approved_devices_list_response serializes to expected JSON 1`] = `
{
  "devices": [
    {
      "deviceName": "iPhone 15",
      "hashedDeviceId": "hashed-device-001",
      "lastPairedAt": 1700000000000,
    },
  ],
  "type": "approved_devices_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types approved_device_remove_response serializes to expected JSON 1`] = `
{
  "success": true,
  "type": "approved_device_remove_response",
}
`;

exports[`IPC message snapshots ServerMessage types recording_pause serializes to expected JSON 1`] = `
{
  "recordingId": "rec-001",
  "type": "recording_pause",
}
`;

exports[`IPC message snapshots ServerMessage types recording_resume serializes to expected JSON 1`] = `
{
  "recordingId": "rec-001",
  "type": "recording_resume",
}
`;

exports[`IPC message snapshots ServerMessage types recording_start serializes to expected JSON 1`] = `
{
  "recordingId": "rec-001",
  "type": "recording_start",
}
`;

exports[`IPC message snapshots ServerMessage types recording_stop serializes to expected JSON 1`] = `
{
  "recordingId": "rec-001",
  "type": "recording_stop",
}
`;

exports[`IPC message snapshots ServerMessage types heartbeat_config_response serializes to expected JSON 1`] = `
{
  "activeHoursEnd": 17,
  "activeHoursStart": 9,
  "enabled": true,
  "intervalMs": 3600000,
  "nextRunAt": 1700003600000,
  "success": true,
  "type": "heartbeat_config_response",
}
`;

exports[`IPC message snapshots ServerMessage types heartbeat_runs_list_response serializes to expected JSON 1`] = `
{
  "runs": [
    {
      "createdAt": 1700000000000,
      "id": "hb-run-001",
      "result": "All systems nominal",
      "title": "Morning heartbeat",
    },
  ],
  "type": "heartbeat_runs_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types heartbeat_run_now_response serializes to expected JSON 1`] = `
{
  "success": true,
  "type": "heartbeat_run_now_response",
}
`;

exports[`IPC message snapshots ServerMessage types heartbeat_checklist_response serializes to expected JSON 1`] = `
{
  "content": 
"- [ ] Check email
- [ ] Review PRs"
,
  "isDefault": false,
  "type": "heartbeat_checklist_response",
}
`;

exports[`IPC message snapshots ServerMessage types heartbeat_checklist_write_response serializes to expected JSON 1`] = `
{
  "success": true,
  "type": "heartbeat_checklist_write_response",
}
`;

exports[`IPC message snapshots ServerMessage types navigate_settings serializes to expected JSON 1`] = `
{
  "tab": "general",
  "type": "navigate_settings",
}
`;

exports[`IPC message snapshots ServerMessage types client_settings_update serializes to expected JSON 1`] = `
{
  "key": "activationKey",
  "type": "client_settings_update",
  "value": "fn",
}
`;

exports[`IPC message snapshots ServerMessage types identity_changed serializes to expected JSON 1`] = `
{
  "emoji": "",
  "home": "",
  "name": "Vellum",
  "personality": "friendly",
  "role": "assistant",
  "type": "identity_changed",
}
`;

exports[`IPC message snapshots ServerMessage types avatar_updated serializes to expected JSON 1`] = `
{
  "avatarPath": "/Users/test/.vellum/workspace/data/avatar/custom-avatar.png",
  "type": "avatar_updated",
}
`;

exports[`IPC message snapshots ServerMessage types generate_avatar_response serializes to expected JSON 1`] = `
{
  "success": true,
  "type": "generate_avatar_response",
}
`;

exports[`IPC message snapshots ServerMessage types guardian_actions_pending_response serializes to expected JSON 1`] = `
{
  "conversationId": "conv-guardian-001",
  "prompts": [
    {
      "actions": [
        {
          "action": "approve_once",
          "label": "Approve once",
        },
        {
          "action": "reject",
          "label": "Reject",
        },
      ],
      "callSessionId": null,
      "conversationId": "conv-guardian-001",
      "expiresAt": 1700100000000,
      "questionText": "Approve tool: bash",
      "requestCode": "REQ-GU",
      "requestId": "req-guardian-001",
      "state": "pending",
      "toolName": "bash",
    },
  ],
  "type": "guardian_actions_pending_response",
}
`;

exports[`IPC message snapshots ServerMessage types guardian_action_decision_response serializes to expected JSON 1`] = `
{
  "applied": true,
  "requestId": "req-guardian-001",
  "type": "guardian_action_decision_response",
}
`;
